--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 <body>
     <nav class="navbar">
         <div class="menu-icon">☰</div>
-        <img src="/Assets/naruto-shippuden-logo.png" alt="Naruto x Uniqlo" class="logo" width="100px">
+        <img src="naruto-shippuden-logo.png" alt="Naruto x Uniqlo" class="logo" width="100px">
         <div class="search-icon">🔍</div>
     </nav>
     
     <div class="hero">
         <div class="hero-image">
             <div class="orange-circle">
-                <img src="/Assets/Naruto.png" alt="Naruto character" class="naruto-character">
+                <img src="Naruto.png" alt="Naruto character" class="naruto-character">
             </div>
         </div>
         <div class="hero-content">
