--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="hero-content">
             <h1>Naruto Shippuden</h1>
             <p>Naruto is a manga series by Masashi Kishimoto which was adapted into an anime series. The Naruto manga tells the story of the life of the main character, Naruto Uzumaki, a hyperactive ninja.</p>
-            <button class="cta-button" onclick="window.location.href='index2.html';">Know More</button>
+            <button class="cta-button" onclick="window.location.href='about.html';">Know More</button>
 
         </div>
     </div>
