--- a/about.html
+++ b/about.html
@@ -152,7 +152,7 @@
 <!-- Stats Card -->
 <div class="card">
     <div class="character-image">
-    <img src="/Assets/1200.png" alt="Naruto with Rasengan"/>
+    <img src="1200.png" alt="Naruto with Rasengan"/>
     </div>
     <div class="content">
     <div class="title">NARUTO SHIPPUDEN</div>
@@ -174,7 +174,7 @@
 <!-- About Card -->
 <div class="card">
     <div class="character-image">
-    <img src="/Assets/f_20230620104031.png" alt="Naruto Standing Pose" />
+    <img src="f_20230620104031.png" alt="Naruto Standing Pose" />
     </div>
     <div class="content">
     <div class="title">ABOUT</div>
